K8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: express-deployment

spec:
  replicas: 3

  selector:
    matchLabels:
      app: main-server

  template:
    metadata:
      labels:
        app: main-server

    spec:
      containers:
        - name: main-server
          image: cohort2_express:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 3000
              name: http
              protocol: TCP

          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"

            limits:
              memory: "128Mi"
              cpu: "500m"
